tests/fail/invalid_syntax_non_identifier.stderr
error: expected identifier
 --> tests/fail/invalid_syntax_non_identifier.rs:4:16
  |
4 |     trait_mux!(123);
  |                ^^^
